Fixed text alignment in item stats.

--- a/src/assets/css/icon.css
+++ b/src/assets/css/icon.css
@@ -1,5 +1,4 @@
 .custom-icon {
-  height: 1rem;
   width: 1rem;
 }
 
@@ -9,7 +8,6 @@
 }
 
 .custom-icon-after-text > img {
-  height: 1rem;
   margin-left: 0.25rem;
   width: 1rem;
 }
@@ -20,9 +18,8 @@
 }
 
 .custom-icon-before-text > img {
-  min-height: 1rem;
   margin-right: 0.25rem;
-  min-width: 1rem;
+  width: 1rem;
 }
 
 .icon-after-text {
